Se trabaja en modo dark/light

--- a/html/login.html
+++ b/html/login.html
@@ -49,7 +49,7 @@
         </div>
     </header>
     <!-- Menu de navegacion -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -88,7 +88,7 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <button class="btn btn--dark btn--light" type="submit">Buscar</button>
                 </form>
             </div>
         </div>
@@ -112,7 +112,7 @@
                         <input type="password" class="form__control form-control" id="password-1"
                             placeholder="Contraseña">
                     </div>
-                    <button type="submit" class="form__button-submit btn btn-outline-success form__button-submit--fade-in-up form__button-submit--animated">Iniciar sesión</button>
+                    <button type="submit" class="form__button-submit btn btn--dark btn--light form__button-submit--fade-in-up form__button-submit--animated">Iniciar sesión</button>
                     <p class="form__text">¿No tienes cuenta?<a class="form__link" href="./register.html"> Registrate</a>
                     </p>
                 </form>
@@ -131,7 +131,7 @@
                 <h5 class="offcanvas-body__price">Subtotal</h5>
                 <h6 class="offcanvas-body__total">Total:</h6>
                 <h6 class="offcanvas-body__total-price">$ total:</h6>
-                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-success">
+                <button type="button" class="offcanvas-body__btn-buy btn btn--dark btn--light">
                     Comprar
                 </button>
             </div>
@@ -155,7 +155,7 @@
                     <form class="form" action="#">
                         <input class="form__email form-control" type="email" name="email" id="email"
                             placeholder="Ingresa tu email" />
-                        <button class="form__button form__button--btn-news btn btn-outline-success">Enviar</button>
+                        <button class="form__button form__button--btn-news btn btn--dark btn--light">Enviar</button>
                     </form>
                 </div>
                 <div class="socials" data-aos="zoom-in" data-aos-once="true">
