--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </header>
     <!-- Menu de navegacion -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -88,7 +88,7 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" />
-                    <button class="btn btn-outline-success" type="submit">
+                    <button class="btn btn--dark btn--light" type="submit">
                         Buscar
                     </button>
                 </form>
@@ -116,7 +116,8 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">FORZA HORIZON 5</h5>
                         <p class="carousel__text">
-                            Forza Horizon 5 es un videojuego de carreras de próxima aparición desarrollado por Playground Games y publicado por Xbox Game Studios.
+                            Forza Horizon 5 es un videojuego de carreras de próxima aparición desarrollado por
+                            Playground Games y publicado por Xbox Game Studios.
                         </p>
                     </div>
                 </div>
@@ -125,7 +126,8 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">BORDERLANDS 2</h5>
                         <p class="carousel__text">
-                            Borderlands 2 es un videojuego de disparos en primera persona con elementos de rol, se trata de la secuela del videojuego de 2009, Borderlands.
+                            Borderlands 2 es un videojuego de disparos en primera persona con elementos de rol, se trata
+                            de la secuela del videojuego de 2009, Borderlands.
                         </p>
                     </div>
                 </div>
@@ -134,7 +136,9 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">RED DEAD REDEMPTION 2</h5>
                         <p class="carousel__text">
-                            Red Dead Redemption 2, estilizado Red Dead Redemption II, es un videojuego de acción-aventura western, en un mundo abierto y en perspectiva de primera y tercera persona, con componentes para un jugador y multijugador.
+                            Red Dead Redemption 2, estilizado Red Dead Redemption II, es un videojuego de
+                            acción-aventura western, en un mundo abierto y en perspectiva de primera y tercera persona,
+                            con componentes para un jugador y multijugador.
                         </p>
                     </div>
                 </div>
@@ -143,7 +147,9 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">THE WITCHER 3</h5>
                         <p class="carousel__text">
-                            The Witcher 3: Wild Hunt es un videojuego de rol desarrollado y publicado por la compañía polaca CD Projekt RED. Esta compañía es la desarrolladora mientras que la distribución corre a cargo de la Warner Bros.
+                            The Witcher 3: Wild Hunt es un videojuego de rol desarrollado y publicado por la compañía
+                            polaca CD Projekt RED. Esta compañía es la desarrolladora mientras que la distribución corre
+                            a cargo de la Warner Bros.
                         </p>
                     </div>
                 </div>
@@ -152,7 +158,9 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">COD MODERN WARFARE</h5>
                         <p class="carousel__text">
-                            Modern Warfare es un videojuego de disparos en primera persona desarrollado por Infinity Ward y publicado por Activision. Es el decimosexto juego de la saga Call of Duty y es un reinicio de la serie Modern Warfare.
+                            Modern Warfare es un videojuego de disparos en primera persona desarrollado por Infinity
+                            Ward y publicado por Activision. Es el decimosexto juego de la saga Call of Duty y es un
+                            reinicio de la serie Modern Warfare.
                         </p>
                     </div>
                 </div>
@@ -179,7 +187,7 @@
                     <div class="card-body">
                         <h5 class="card-title">COD Modern Warfare</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -187,7 +195,7 @@
                     <div class="card-body">
                         <h5 class="card-title">BioShock Infinite</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -195,7 +203,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Borderlands 2</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class=" card product4">
@@ -203,7 +211,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Destiny 2</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -211,7 +219,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Grand Theft Auto V</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -219,7 +227,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Hitman 3</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -227,7 +235,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Fallout 4</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -235,7 +243,7 @@
                     <div class="card-body">
                         <h5 class="card-title">The Witcher 3 Wild Hunt</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -254,7 +262,7 @@
                     <div class="card-body">
                         <h5 class="card-title">BioShock</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card position-relative">
@@ -265,7 +273,7 @@
                     <div class="card-body">
                         <h5 class="card-title">DOOM (2016)</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card position-relative">
@@ -276,7 +284,7 @@
                     <div class="card-body">
                         <h5 class="card-title">The Witcher 3 Wild Hunt</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card position-relative">
@@ -287,7 +295,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Half Life 2</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card position-relative">
@@ -298,7 +306,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Hitman 3</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card position-relative">
@@ -309,7 +317,7 @@
                     <div class="card-body">
                         <h5 class="card-title">PAYDAY 2</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card position-relative">
@@ -320,7 +328,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Counter Strike Global</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="card position-relative">
@@ -331,7 +339,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Grand Theft Auto V</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -349,7 +357,7 @@
                 <h5 class="offcanvas-body__price">Subtotal</h5>
                 <h6 class="offcanvas-body__total">Total:</h6>
                 <h6 class="offcanvas-body__total-price">$ total:</h6>
-                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-success">
+                <button type="button" class="offcanvas-body__btn-buy btn btn--dark btn--light">
                     Comprar
                 </button>
             </div>
@@ -373,7 +381,7 @@
                     <form class="form" action="#">
                         <input class="form__email form-control" type="email" name="email" id="email"
                             placeholder="Ingresa tu email" />
-                        <button class="form__button form__button--btn-news btn btn-outline-success">Enviar</button>
+                        <button class="form__button form__button--btn-news btn btn--dark btn--light">Enviar</button>
                     </form>
                 </div>
                 <div class="socials" data-aos="zoom-in" data-aos-once="true">
