--- a/html/contact.html
+++ b/html/contact.html
@@ -50,7 +50,7 @@
         </div>
     </header>
     <!-- Menu de navegacion -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -89,7 +89,7 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <button class="btn btn--dark btn--light" type="submit">Buscar</button>
                 </form>
             </div>
         </div>
@@ -125,7 +125,7 @@
                             placeholder="Mensaje (opcional)" rows="10"></textarea>
                     </div>
                     <button type="button"
-                        class="form__button-submit btn btn-outline-success form__button-submit--fade-in-up form__button-submit--animated">Enviar</button>
+                        class="form__button-submit btn btn--dark btn--light form__button-submit--fade-in-up form__button-submit--animated">Enviar</button>
                 </form>
             </div>
         </section>
@@ -162,7 +162,7 @@
                 <h5 class="offcanvas-body__price">Subtotal</h5>
                 <h6 class="offcanvas-body__total">Total:</h6>
                 <h6 class="offcanvas-body__total-price">$ total:</h6>
-                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-success">
+                <button type="button" class="offcanvas-body__btn-buy btn btn--dark btn--light">
                     Comprar
                 </button>
             </div>
@@ -186,7 +186,7 @@
                     <form class="form" action="#">
                         <input class="form__email form-control" type="email" name="email" id="email"
                             placeholder="Ingresa tu email" />
-                        <button class="form__button form__button--btn-news btn btn-outline-success">Enviar</button>
+                        <button class="form__button form__button--btn-news btn btn--dark btn--light">Enviar</button>
                     </form>
                 </div>
                 <div class="socials" data-aos="zoom-in" data-aos-once="true">
