Se optimiza codigo se trabaja sobre footer

--- a/html/contact.html
+++ b/html/contact.html
@@ -211,7 +211,12 @@
         </div>
         <!-- Pie de pagina con copyright -->
         <div class="copyright">
-            <p class="copyright__text">&copy; 2022 Copyright - Nekzus Game Store</p>
+            <p class="copyright__text">&copy; 2022 Copyright - Nekzus <span class="copyright__profile"><a
+                        class="copyright__link copyright__link--github" href="https://github.com/Nekzus" title="Github"
+                        target="_blank"><i class="copyright__github bi bi-github"></i></a><a
+                        class="copyright__link copyright__link--linkedin"
+                        href="https://www.linkedin.com/in/mauricio-sebasti%C3%A1n-ortega-71b43788/" title="Linkedin"
+                        target="_blank"><i class="copyright__linkedin bi bi-linkedin"></i></a></span></p>
         </div>
     </footer>
     <!-- LINKS DE CSS -->
