--- a/html/login.html
+++ b/html/login.html
@@ -24,10 +24,10 @@
     <!-- Custom -->
     <link rel="stylesheet" href="../css/stylescss.css">
     <!-- META DESCRIPTION -->
-    <meta name="description"
-        content="Inicia sesión para realizar tus compras y guardar tus productos favoritos">
+    <meta name="description" content="Inicia sesión para realizar tus compras y guardar tus productos favoritos">
     <!-- META KEYWORDS -->
-    <meta name="keywords" content="login, inicio sesión, ingreso usuario, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo">
+    <meta name="keywords"
+        content="login, inicio sesión, ingreso usuario, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo">
     <title>Nekzus Game Store - Login Page</title>
 </head>
 
@@ -99,7 +99,8 @@
             <div class="form__subtitle">
                 <h3 class="form__content-subtitle">Inicia sesión</h3>
             </div>
-            <div class="form__form-group  form__form-group--center-items-grid form__form-group--fade-in-up form__form-group--animated">
+            <div
+                class="form__form-group  form__form-group--center-items-grid form__form-group--fade-in-up form__form-group--animated">
                 <h3 class="form__title">Introduce los datos de tu cuenta</h3>
                 <form class="form__formu">
                     <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
@@ -112,7 +113,9 @@
                         <input type="password" class="form__control form-control" id="password-1"
                             placeholder="Contraseña">
                     </div>
-                    <button type="submit" class="form__button-submit btn btn--dark btn--light form__button-submit--fade-in-up form__button-submit--animated">Iniciar sesión</button>
+                    <button type="submit"
+                        class="form__button-submit btn btn--dark btn--light form__button-submit--fade-in-up form__button-submit--animated">Iniciar
+                        sesión</button>
                     <p class="form__text">¿No tienes cuenta?<a class="form__link" href="./register.html"> Registrate</a>
                     </p>
                 </form>
@@ -180,7 +183,12 @@
         </div>
         <!-- Pie de pagina con copyright -->
         <div class="copyright">
-            <p class="copyright__text">&copy; 2022 Copyright - Nekzus Game Store</p>
+            <p class="copyright__text">&copy; 2022 Copyright - Nekzus <span class="copyright__profile"><a
+                        class="copyright__link copyright__link--github" href="https://github.com/Nekzus" title="Github"
+                        target="_blank"><i class="copyright__github bi bi-github"></i></a><a
+                        class="copyright__link copyright__link--linkedin"
+                        href="https://www.linkedin.com/in/mauricio-sebasti%C3%A1n-ortega-71b43788/" title="Linkedin"
+                        target="_blank"><i class="copyright__linkedin bi bi-linkedin"></i></a></span></p>
         </div>
     </footer>
     <!-- LINKS DE CSS -->
