--- a/html/products.html
+++ b/html/products.html
@@ -24,10 +24,10 @@
     <!-- Custom -->
     <link rel="stylesheet" href="../css/stylescss.css">
     <!-- META DESCRIPTION -->
-    <meta name="description"
-        content="En esta página podrás filtrar y buscar los productos por categoria y precio.">
+    <meta name="description" content="En esta página podrás filtrar y buscar los productos por categoria y precio.">
     <!-- META KEYWORDS -->
-    <meta name="keywords" content="productos, precios, categorias, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo">
+    <meta name="keywords"
+        content="productos, precios, categorias, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo">
     <title>Nekzus Game Store - Products Page</title>
 </head>
 
@@ -341,7 +341,12 @@
         </div>
         <!-- Pie de pagina con copyright -->
         <div class="copyright">
-            <p class="copyright__text">&copy; 2022 Copyright - Nekzus Game Store</p>
+            <p class="copyright__text">&copy; 2022 Copyright - Nekzus <span class="copyright__profile"><a
+                        class="copyright__link copyright__link--github" href="https://github.com/Nekzus" title="Github"
+                        target="_blank"><i class="copyright__github bi bi-github"></i></a><a
+                        class="copyright__link copyright__link--linkedin"
+                        href="https://www.linkedin.com/in/mauricio-sebasti%C3%A1n-ortega-71b43788/" title="Linkedin"
+                        target="_blank"><i class="copyright__linkedin bi bi-linkedin"></i></a></span></p>
         </div>
     </footer>
     <!-- LINKS DE CSS -->
