--- a/html/register.html
+++ b/html/register.html
@@ -102,7 +102,8 @@
             <div class="form__subtitle">
                 <h3 class="form__content-subtitle">Registrate</h3>
             </div>
-            <div class="form__form-group  form__form-group--center-items-grid form__form-group--fade-in-up form__form-group--animated">
+            <div
+                class="form__form-group  form__form-group--center-items-grid form__form-group--fade-in-up form__form-group--animated">
                 <h3 class="form__title">Completa todos los campos</h3>
                 <form class="form__formu">
                     <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
@@ -125,7 +126,8 @@
                         <input type="password" class="form__control form-control" id="password-2"
                             placeholder="Confirmar contraseña" required />
                     </div>
-                    <button type="submit" class="form__button-submit btn btn--dark btn--light form__button-submit--fade-in-up form__button-submit--animated">
+                    <button type="submit"
+                        class="form__button-submit btn btn--dark btn--light form__button-submit--fade-in-up form__button-submit--animated">
                         Registrarse
                     </button>
                     <p class="form__text">
@@ -196,7 +198,12 @@
         </div>
         <!-- Pie de pagina con copyright -->
         <div class="copyright">
-            <p class="copyright__text">&copy; 2022 Copyright - Nekzus Game Store</p>
+            <p class="copyright__text">&copy; 2022 Copyright - Nekzus <span class="copyright__profile"><a
+                        class="copyright__link copyright__link--github" href="https://github.com/Nekzus" title="Github"
+                        target="_blank"><i class="copyright__github bi bi-github"></i></a><a
+                        class="copyright__link copyright__link--linkedin"
+                        href="https://www.linkedin.com/in/mauricio-sebasti%C3%A1n-ortega-71b43788/" title="Linkedin"
+                        target="_blank"><i class="copyright__linkedin bi bi-linkedin"></i></a></span></p>
         </div>
     </footer>
     <!-- LINKS DE CSS -->
