--- a/html/login.html
+++ b/html/login.html
@@ -36,7 +36,7 @@
         <!-- Logo y titulo con link a la pagina de inicio -->
         <div class="header__logo">
             <a href="../index.html" class="header__link"><img class="header__logo-site"
-                    src="../images/logo-nekzus-game-store-shadow.png" alt="logo" /></a>
+                    src="../images/logo-nekzus-game-store-shadow.avif" alt="logo" /></a>
         </div>
         <div class="header__title">
             <a href="../index.html" class="header__link">
