--- a/html/products.html
+++ b/html/products.html
@@ -36,7 +36,7 @@
         <!-- Logo y titulo con link a la pagina de inicio -->
         <div class="header__logo">
             <a href="../index.html" class="header__link"><img class="header__logo-site"
-                    src="../images/logo-nekzus-game-store-shadow.png" alt="logo" /></a>
+                    src="../images/logo-nekzus-game-store-shadow.avif" alt="logo" /></a>
         </div>
         <div class="header__title">
             <a href="../index.html" class="header__link">
@@ -119,7 +119,7 @@
             </section>
             <!-- Productos -->
             <div class="card">
-                <img src="../images/pda_Tomb-Raider-(2013).webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Tomb-Raider-(2013).avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Tomb Raider (2013)</h5>
                     <p class="card-text">$5000</p>
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_The-Witcher-3-Wild-Hunt.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">The Witcher 3-Wild Hunt</h5>
                     <p class="card-text">$5000</p>
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Red-Dead-Redemption-2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Red-Dead-Redemption-2.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Red Dead Redemption 2</h5>
                     <p class="card-text">$5000</p>
@@ -143,7 +143,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Portal.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Portal.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Portal</h5>
                     <p class="card-text">$5000</p>
@@ -151,7 +151,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Portal-2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Portal-2.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Portal 2</h5>
                     <p class="card-text">$5000</p>
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_PAYDAY-2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_PAYDAY-2.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">PAYDAY 2</h5>
                     <p class="card-text">$5000</p>
@@ -167,7 +167,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Limbo.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Limbo.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Limbo</h5>
                     <p class="card-text">$5000</p>
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Life-is-Strange.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Life-is-Strange.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Life is Strange</h5>
                     <p class="card-text">$5000</p>
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Left-4-Dead-2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Left-4-Dead-2.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Left 4 Dead 2</h5>
                     <p class="card-text">$5000</p>
@@ -191,7 +191,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Hitman-3.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Hitman 3</h5>
                     <p class="card-text">$5000</p>
@@ -199,7 +199,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Grand-Theft-Auto-V.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Grand Theft Auto V</h5>
                     <p class="card-text">$5000</p>
@@ -207,7 +207,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Forza-Horizon-5.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Forza-Horizon-5.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Forza Horizon 5</h5>
                     <p class="card-text">$5000</p>
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Fallout-4.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Fallout-4.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Fallout 4</h5>
                     <p class="card-text">$5000</p>
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_DOOM-(2016).webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_DOOM-(2016).avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">DOOM (2016)</h5>
                     <p class="card-text">$5000</p>
@@ -231,7 +231,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Destiny-2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Destiny-2.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Destiny 2</h5>
                     <p class="card-text">$5000</p>
@@ -239,7 +239,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Counter-Strike-Global.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Counter-Strike-Global.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Counter Strike Global</h5>
                     <p class="card-text">$5000</p>
@@ -247,7 +247,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_COD-Modern-Warfare.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_COD-Modern-Warfare.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">COD Modern Warfare</h5>
                     <p class="card-text">$5000</p>
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_Borderlands-2.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_Borderlands-2.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">Borderlands 2</h5>
                     <p class="card-text">$5000</p>
@@ -263,7 +263,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_BioShock.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_BioShock.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">BioShock</h5>
                     <p class="card-text">$5000</p>
@@ -271,7 +271,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/pda_BioShock-Infinite.webp" class="card-img-top" alt="producto" />
+                <img src="../images/pda_BioShock-Infinite.avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
                     <h5 class="card-title">BioShock Infinite</h5>
                     <p class="card-text">$5000</p>
