Se agregan banners-imagenes formato Avif

--- a/html/contact.html
+++ b/html/contact.html
@@ -138,6 +138,18 @@
                 <iframe class="video__iframe embed-responsive-item" src="https://www.youtube.com/embed/oDKKu7hxT78"
                     allowfullscreen></iframe>
             </div>
+            <div class="video__content embed-responsive embed-responsive-16by9">
+                <iframe class="video__iframe embed-responsive-item" src="https://www.youtube.com/embed/RkC0l4iekYo"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="video__content embed-responsive embed-responsive-16by9">
+                <iframe class="video__iframe embed-responsive-item" src="https://www.youtube.com/embed/0tUqIHwHDEc"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="video__content embed-responsive embed-responsive-16by9">
+                <iframe class="video__iframe embed-responsive-item" src="https://www.youtube.com/embed/4mHq6Y7JSmg"
+                    allowfullscreen></iframe>
+            </div>
         </section>
         <section class="map__container">
             <div class="map__subtitle">
