--- a/index.html
+++ b/index.html
@@ -109,9 +109,24 @@
                     aria-label="Slide 4"></button>
                 <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="4"
                     aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="5"
+                    aria-label="Slide 6"></button>
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="6"
+                    aria-label="Slide 7"></button>
+                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="7"
+                    aria-label="Slide 8"></button>
             </div>
             <div class="carousel__inner carousel-inner">
                 <div class="carousel__item carousel-item active">
+                    <img src="./images/slider_banner-xbox-series.avif" class="d-block w-100" alt="banner xbox series" />
+                </div>
+                <div class="carousel__item carousel-item">
+                    <img src="./images/slider_banner-playstation-ps5.avif" class="d-block w-100" alt="banner playstation ps5" />
+                </div>
+                <div class="carousel__item carousel-item">
+                    <img src="./images/slider_banner-nintendo-switch.avif" class="d-block w-100" alt="banner nintendo switch" />
+                </div>
+                <div class="carousel__item carousel-item">
                     <img src="./images/slider_Forza-Horizon-5.avif" class="d-block w-100" alt="forza horizon 5" />
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">FORZA HORIZON 5</h5>
@@ -132,7 +147,8 @@
                     </div>
                 </div>
                 <div class="carousel__item carousel-item">
-                    <img src="./images/slider_Red-Dead-Redemption-2.avif" class="d-block w-100" alt="red dead redemption 2" />
+                    <img src="./images/slider_Red-Dead-Redemption-2.avif" class="d-block w-100"
+                        alt="red dead redemption 2" />
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">RED DEAD REDEMPTION 2</h5>
                         <p class="carousel__text">
@@ -143,7 +159,8 @@
                     </div>
                 </div>
                 <div class="carousel__item carousel-item">
-                    <img src="./images/slider_The-Witcher-3-Wild-Hunt.avif" class="d-block w-100" alt="the witcher 3 - wild hunt" />
+                    <img src="./images/slider_The-Witcher-3-Wild-Hunt.avif" class="d-block w-100"
+                        alt="the witcher 3 - wild hunt" />
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">THE WITCHER 3</h5>
                         <p class="carousel__text">
@@ -239,7 +256,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./images/pda_The-Witcher-3-Wild-Hunt.avif" class="card-img-top" alt="the witcher 3 - wild hunt" />
+                    <img src="./images/pda_The-Witcher-3-Wild-Hunt.avif" class="card-img-top"
+                        alt="the witcher 3 - wild hunt" />
                     <div class="card-body">
                         <h5 class="card-title">The Witcher 3 Wild Hunt</h5>
                         <p class="card-text">$5000</p>
@@ -280,7 +298,8 @@
                     <span
                         class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">40%
                         <span class="visually-hidden"></span></span>
-                    <img src="./images/pda_The-Witcher-3-Wild-Hunt.avif" class="card-img-top" alt="the witcher 3 - wild hunt" />
+                    <img src="./images/pda_The-Witcher-3-Wild-Hunt.avif" class="card-img-top"
+                        alt="the witcher 3 - wild hunt" />
                     <div class="card-body">
                         <h5 class="card-title">The Witcher 3 Wild Hunt</h5>
                         <p class="card-text">$5000</p>
@@ -324,7 +343,8 @@
                     <span
                         class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">50%
                         <span class="visually-hidden"></span></span>
-                    <img src="./images/pda_Counter-Strike-Global.avif" class="card-img-top" alt="counter strike global" />
+                    <img src="./images/pda_Counter-Strike-Global.avif" class="card-img-top"
+                        alt="counter strike global" />
                     <div class="card-body">
                         <h5 class="card-title">Counter Strike Global</h5>
                         <p class="card-text">$5000</p>
@@ -375,7 +395,8 @@
                     </div>
                 </div>
                 <div class=" card product4">
-                    <img src="./images/pda_nintendo-switch-white.avif" class="card-img-top" alt="nintendo switch white" />
+                    <img src="./images/pda_nintendo-switch-white.avif" class="card-img-top"
+                        alt="nintendo switch white" />
                     <div class="card-body">
                         <h5 class="card-title">Nintendo switch white</h5>
                         <p class="card-text">$ 120.000</p>
@@ -447,6 +468,14 @@
                     </div>
                 </div>
                 <div class="card">
+                    <img src="./images/pda_ps5-camera.avif" class="card-img-top" alt="camara PS5" />
+                    <div class="card-body">
+                        <h5 class="card-title">Camara PS5</h5>
+                        <p class="card-text">$ 12.000</p>
+                        <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                    </div>
+                </div>
+                <div class="card">
                     <img src="./images/pda_ps5-pulse-3d.avif" class="card-img-top" alt="auricular PS5 pulse 3d" />
                     <div class="card-body">
                         <h5 class="card-title">Auricular PS5 pulse 3d</h5>
@@ -463,7 +492,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./images/pda_hyperx-cloud-stinger.avif" class="card-img-top" alt="auricular hyperx stinger" />
+                    <img src="./images/pda_hyperx-cloud-stinger.avif" class="card-img-top"
+                        alt="auricular hyperx stinger" />
                     <div class="card-body">
                         <h5 class="card-title">Auricular Hyperx Stinger</h5>
                         <p class="card-text">$ 9.000</p>
