--- a/html/products.html
+++ b/html/products.html
@@ -104,10 +104,11 @@
                 <h4 class="products__filters-title">Aplicar filtros</h4>
                 <select class="products__category">
                     <option>Filtrar por Categoria:</option>
-                    <option>Accion</option>
-                    <option>Aventura</option>
-                    <option>Shooter</option>
-                    <option>Terror</option>
+                    <option>Consolas</option>
+                    <option>Joysticks</option>
+                    <option>Auriculares</option>
+                    <option>Camaras</option>
+                    <option>Juegos</option>
                 </select>
                 <select class="products__order">
                     <option>Ordenar por:</option>
@@ -118,6 +119,160 @@
                 </select>
             </section>
             <!-- Productos -->
+            <div class="card">
+                <img src="../images/pda_playstation-5-standard.avif" class="card-img-top" alt="playstation 5" />
+                <div class="card-body">
+                    <h5 class="card-title">PS5 standard</h5>
+                    <p class="card-text">$ 200.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_xbox-serie-x.avif" class="card-img-top" alt="xbox serie x" />
+                <div class="card-body">
+                    <h5 class="card-title">XBOX serie x</h5>
+                    <p class="card-text">$ 170.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_xbox-serie-s.avif" class="card-img-top" alt="xbox serie s" />
+                <div class="card-body">
+                    <h5 class="card-title">XBOX serie s</h5>
+                    <p class="card-text">$ 100.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class=" card product4">
+                <img src="../images/pda_nintendo-switch-white.avif" class="card-img-top"
+                    alt="nintendo switch white" />
+                <div class="card-body">
+                    <h5 class="card-title">Nintendo switch white</h5>
+                    <p class="card-text">$ 120.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_ps5-dualsense.avif" class="card-img-top" alt="joystick PS5 white" />
+                <div class="card-body">
+                    <h5 class="card-title">Joystick PS5 white</h5>
+                    <p class="card-text">$ 17.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_ps5-nova-pink.avif" class="card-img-top" alt="joystick PS5 pink" />
+                <div class="card-body">
+                    <h5 class="card-title">Joystick PS5 pink</h5>
+                    <p class="card-text">$ 17.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_ps5-recharge.avif" class="card-img-top" alt="estacion recarga PS5" />
+                <div class="card-body">
+                    <h5 class="card-title">Estacion recarga PS5</h5>
+                    <p class="card-text">$ 10.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_ps5-camera.avif" class="card-img-top" alt="camara PS5" />
+                <div class="card-body">
+                    <h5 class="card-title">Camara PS5</h5>
+                    <p class="card-text">$ 12.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_xbox-series-black.avif" class="card-img-top" alt="joystick Xbox black" />
+                <div class="card-body">
+                    <h5 class="card-title">Joystick Xbox black</h5>
+                    <p class="card-text">$ 14.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_xbox-series-white.avif" class="card-img-top" alt="joystick Xbox white" />
+                <div class="card-body">
+                    <h5 class="card-title">Joystick Xbox white</h5>
+                    <p class="card-text">$ 14.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_xbox-shock-blue.avif" class="card-img-top" alt="joystick Xbox blue" />
+                <div class="card-body">
+                    <h5 class="card-title">Joystick Xbox blue</h5>
+                    <p class="card-text">$ 14.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_logitech-g29.avif" class="card-img-top" alt="volante logitech G29" />
+                <div class="card-body">
+                    <h5 class="card-title">Volante Logitech G29</h5>
+                    <p class="card-text">$ 50.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_ps5-control.avif" class="card-img-top" alt="control PS5" />
+                <div class="card-body">
+                    <h5 class="card-title">Control PS5</h5>
+                    <p class="card-text">$ 9.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_ps5-pulse-3d.avif" class="card-img-top" alt="auricular PS5 pulse 3d" />
+                <div class="card-body">
+                    <h5 class="card-title">Auricular PS5 pulse 3d</h5>
+                    <p class="card-text">$ 30.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_astro-a10.avif" class="card-img-top" alt="auricular astro a10" />
+                <div class="card-body">
+                    <h5 class="card-title">Auricular Astro A10</h5>
+                    <p class="card-text">$ 13.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_hyperx-cloud-stinger.avif" class="card-img-top"
+                    alt="auricular hyperx stinger" />
+                <div class="card-body">
+                    <h5 class="card-title">Auricular Hyperx Stinger</h5>
+                    <p class="card-text">$ 9.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_hyperx-cloud-alpha.avif" class="card-img-top" alt="auricular hyperx alpha" />
+                <div class="card-body">
+                    <h5 class="card-title">Auricular Hyperx Alpha</h5>
+                    <p class="card-text">$ 13.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_ps4-gold.avif" class="card-img-top" alt="auricular PS4 gold" />
+                <div class="card-body">
+                    <h5 class="card-title">Auricular PS4 Gold</h5>
+                    <p class="card-text">$ 24.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/pda_genius-hs-g710v.avif" class="card-img-top" alt="auricular genius HSG710V" />
+                <div class="card-body">
+                    <h5 class="card-title">Auricular Genius HSG710V</h5>
+                    <p class="card-text">$ 7.000</p>
+                    <a href="#" class="btn btn--dark btn--light">Agregar al carrito</a>
+                </div>
+            </div>
             <div class="card">
                 <img src="../images/pda_Tomb-Raider-(2013).avif" class="card-img-top" alt="producto" />
                 <div class="card-body">
