--- a/404.html
+++ b/404.html
@@ -37,22 +37,7 @@
         <div class="center container">
             <div class="center__error">
                 <div class="center__number">4</div>
-                <div class="center__illustration">
-                    <div class="center__circle"></div>
-                    <div class="center__clip">
-                        <div class="center__paper">
-                            <div class="center__face">
-                                <div class="center__eyes">
-                                    <div class="center__eye center__eye--left"></div>
-                                    <div class="center__eye center__eye--right"></div>
-                                </div>
-                                <div class="center__rosyCheeks center__rosyCheeks--left"></div>
-                                <div class="center__rosyCheeks center__rosyCheeks--right"></div>
-                                <div class="center__mouth"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="center__number">0</div>
                 <div class="center__number">4</div>
             </div>
 
