Se trabaja sobre marcas y medios de pago habilitados

--- a/html/login.html
+++ b/html/login.html
@@ -139,6 +139,53 @@
                 </button>
             </div>
         </div>
+        <!-- Carousel Infinito Marcas -->
+        <div class="slider">
+            <div class="slide-track">
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_xbox.avif" alt="logo xbox" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_corsair.avif" alt="logo corsair" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_hyperx.avif" alt="logo hyperx" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_logitech.avif" alt="logo logitech" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_playstation.avif" alt="logo playstation" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_msi.avif" alt="logo msi" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_nintendo.avif" alt="logo nintendo" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_xbox.avif" alt="logo xbox" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_corsair.avif" alt="logo corsair" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_hyperx.avif" alt="logo hyperx" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_logitech.avif" alt="logo logitech" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_playstation.avif" alt="logo playstation" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_msi.avif" alt="logo msi" />
+                </div>
+                <div class="slide">
+                    <img class="slide__img" src="../images/logos/lg_nintendo.avif" alt="logo nintendo" />
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="pre-footer">
@@ -149,6 +196,15 @@
                     Nekzus Game Store es una tienda de videojuegos en línea, donde
                     podrás encontrar todo tipo de videojuegos, desde los más populares
                     hasta los más nuevos.
+                </p>
+            </section>
+            <!-- Medios de pago -->
+            <section class="section-pay" data-aos="zoom-in" data-aos-once="true">
+                <h3 class="section-pay__title-pay">Medios de Pago Habilitados</h3>
+                <p class="section-pay__desc-pay">
+                    <i class="bi bi-cash"></i>
+                    <i class="bi bi-bank"></i>
+                    <i class="bi bi-credit-card-2-back-fill"></i>
                 </p>
             </section>
             <!-- Redes sociales, newsletter y contacto -->
